tests/golden/sessionStoreMonitoring/sessionStoreMonitoring/sessionStoreMonitoring/test-instance-02/Gateway-test-instance-02.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: test-instance-02
  namespace: test-instance-02
spec:
  infrastructure:
    parametersRef:
      name: test-instance-02
