tests/golden/sessionStoreMonitoring/sessionStoreMonitoring/sessionStoreMonitoring/test-instance-02/GatewayParameters-test-instance-02.yaml
apiVersion: microgateway.airlock.com/v1alpha1
kind: GatewayParameters
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: test-instance-02
  namespace: test-instance-02
spec:
  defaults:
    sessionHandlingRef:
      name: test-instance-02
  kubernetes:
    deployment:
      replicas: 2
