tests/golden/sessionStoreMonitoring/sessionStoreMonitoring/sessionStoreMonitoring/test-instance-02/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: test-instance-02
    openshift.io/cluster-monitoring: 'true'
  name: test-instance-02
