tests/golden/sessionStoreMonitoring/sessionStoreMonitoring/sessionStoreMonitoring/test-instance-02/PodDisruptionBudget-test-instance-02.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    gateway.networking.k8s.io/gateway-name: test-instance-02
  name: test-instance-02
  namespace: test-instance-02
